# HTML_CSS

./: .env.example  .gitignore  README.md  env_example  pyproject.toml  style.css
blog/: admin.py  forms.py  mixins.py  models.py  urls.py  views.py
blog/migrations/: 0001_initial.py  0002_alter_blogpost_options_blogpost_author_and_more.py
blog/templates/blog/: base_blog.html  blogpost_confirm_delete.html  blogpost_detail.html  blogpost_form.html  blogpost_list.html  my_posts.html
catalog/: admin.py  catalog.json  forms.py  mixins.py  models.py  urls.py  views.py
catalog/management/commands/: create_content_manager_group.py  create_groups.py  set_product_owners.py  testing_products.py
catalog/migrations/: 0001_initial.py  0002_alter_product_options_product_is_published_and_more.py  0002_contact.py  0003_alter_product_options_product_owner.py
catalog/static/: style.css
catalog/templates/: base.html  catalog.html  contacts.html  home.html  product_detail.html
catalog/templates/catalog/: catalog.html  contacts.html  product_confirm_delete.html  product_detail.html  product_form.html  product_list.html
catalog/templates/includes/: sidebar.html
catalog/templatetags/: my_tags.py
config/: settings.py  urls.py
src/: catalogue.html  category.html  contacts.html  copy_catalog.html  copy_contacts.html  copy_home.html  copy_product_detail.html  main_page.html  server_part.py  server_part_git.py
users/: admin.py  forms.py  managers.py  models.py  urls.py  views.py
users/migrations/: 0001_initial.py  0002_alter_user_managers.py
(+4 files in other folders)
